--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>💰 Mis Gastos</h1>
+        <div style="text-align: center; font-size: 50px; margin-bottom: 10px;">
+            💰
+        </div>
+        
+        <h1>Mis Gastos</h1>
+        
         <div class="balance">
             <h2>Total: <span id="total">$0.00</span></h2>
         </div>
